// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WHEN has_collection enabled AND nav_children_exclude set to false THEN return only root 1`] = `
Array [
  Object {
    "children": Array [],
    "hasTitleNumberOutlined": false,
    "icon": "bookOutlined",
    "key": "foo",
    "navExclude": false,
    "title": "Foo",
    "vaultName": "vault1",
  },
]
`;

exports[`WHEN has_collection enabled THEN return only root 1`] = `
Array [
  Object {
    "children": Array [],
    "hasTitleNumberOutlined": false,
    "icon": "bookOutlined",
    "key": "foo",
    "navExclude": false,
    "title": "Foo",
    "vaultName": "vault1",
  },
]
`;

exports[`WHEN nav_exclude_children enabled THEN return only root 1`] = `
Array [
  Object {
    "children": Array [],
    "hasTitleNumberOutlined": false,
    "icon": "bookOutlined",
    "key": "foo",
    "navExclude": false,
    "title": "Foo",
    "vaultName": "vault1",
  },
]
`;

exports[`WHEN regular tree THEN return regular tree 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "hasTitleNumberOutlined": false,
        "icon": "bookOutlined",
        "key": "foo.ch1",
        "navExclude": false,
        "title": "Ch1",
        "vaultName": "vault1",
      },
    ],
    "hasTitleNumberOutlined": false,
    "icon": "bookOutlined",
    "key": "foo",
    "navExclude": false,
    "title": "Foo",
    "vaultName": "vault1",
  },
]
`;
